--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -1,9 +1,11 @@
 @charset "UTF-8";
 
 // setting
-
 @import "setting/fonts";        // 폰트 파일 관련된 CSS 설정
 @import "setting/vars";         // 변수 관련된 CSS 설정
 @import "setting/reset";        // 브라우저 스타일 초기화 및 리셋 관련 CSS 설정 (브라우저 간에 기본 스타일이 다르거나 렌더링 동작이 다를 수 있기 때문에, 이를 보완하고 브라우저 간의 일관된 디자인을 유지하거나 조작할 때 사용)
 @import "setting/mixin";        // 믹스인 관련된  CSS 설정
 @import "setting/common";       // 공통적인 CSS 스타일 설정
+
+//section
+@import "section/layout";
