--- a/src/assets/scss/setting/_vars.scss
+++ b/src/assets/scss/setting/_vars.scss
@@ -19,6 +19,7 @@
     --white500: #fff;
 
     --red: #f00;
+    --blue: rgb(0, 68, 255);
     
     // 폰트 셋팅
     font-family: var(--mainfont-nanum), var(--mainfont-nexon);
