비디오 컴포넌트 통합 작업

--- a/src/assets/scss/setting/_common.scss
+++ b/src/assets/scss/setting/_common.scss
@@ -17,6 +17,15 @@ section {
     }
 }
 
+// 섹션 로딩 소스
+.is-loading {
+    opacity: 0;
+    transition: opacity 0.5s;
+}
+.is-loaded {
+    opacity: 1;
+    transition: opacity 0.5s;
+}
 
 // 마우스 오버 아이콘
 .play__icon {
