--- a/src/assets/scss/section/_streamer.scss
+++ b/src/assets/scss/section/_streamer.scss
@@ -9,41 +9,61 @@
     }
 
     .streamer {
-        margin-right: 20px;
+        // margin-right: 20px;
 
         .streamer__img {
-            width: 150px;
-            height: 150px;
+            // width: 150px;
+            // height: 150px;
             border-radius: 50%;
             overflow: hidden;
             margin-bottom: 10px;
         }
         .streamer__info {
-            width: 150px;
+            // width: 150px;
             text-align: center;
             @include line-one;
+            // padding-bottom: 40px;
+        }
+    }
+}
+
+#streamerPage {
+    .streamer__inner {
+        .streamer {
+            margin-right: 20px;
+        }
+        .streamer__img {
+            width: 150px;
+            height: 150px;
+        }
+        .streamer__info {
+            width: 150px;
             padding-bottom: 40px;
         }
     }
 }
-@media (max-width: 1200px){
-    .streamer__inner {
-        justify-content: center;
 
-        .streamer {
-            margin-right: 0;
-            
-            .streamer__img {
-                width: 130px;
-                height: 130px;
-                margin: 10px auto;
-            }
-            .streamer__info {}
-        }   
+@media (max-width: 1200px){
+    #streamerPage {
+        .streamer__inner {
+            justify-content: center;
+    
+            .streamer {
+                margin-right: 0;
+                
+                .streamer__img {
+                    width: 130px;
+                    height: 130px;
+                    margin: 10px auto;
+                }
+            }   
+        }
     }
 }
 @media (max-width: 800px){
-    .streamer__inner {
-        margin-top: 70px;
+    #streamerPage {
+        .streamer__inner {
+            margin-top: 70px;
+        }
     }
 }
