--- a/src/assets/scss/setting/_vars.scss
+++ b/src/assets/scss/setting/_vars.scss
@@ -24,6 +24,7 @@
     --white500: #fff;
 
     --red: #f00;
+    --red100: rgba(255, 0, 0, 0.441);
     --blue: rgb(0, 68, 255);
     
     // 폰트 셋팅
