--- a/src/assets/scss/section/_video.scss
+++ b/src/assets/scss/section/_video.scss
@@ -77,6 +77,63 @@
     }
 }
 
+.video__inner.card {
+    min-height: 100vh;
+    
+    .video {
+        margin-bottom: 40px;
+        border-radius: 10px;
+        background-color: #11111100;
+
+        @media (max-width: 600px){
+            margin-bottom: 10px;
+        }
+
+        .video__thumb {
+
+            a {
+                position: relative;
+                display: block;
+                cursor: pointer;
+                width: 100%;
+                // padding-bottom: 56.25%;
+                position: relative;
+                background-size: cover;
+                background-position: center;
+            }
+        }
+
+        .video__info {
+            padding: 10px 15px;
+            color: #fff;
+    
+            .title {
+                font-size: 1rem;
+                @include line-two;
+            }
+            .info {
+                display: flex;
+                justify-content: space-between;
+                align-items: flex-end;
+                
+                .author {
+                    @include line-one;
+                    color: #666;
+                    transition: all 0.3s;
+    
+                    &:hover {
+                        color: #fff;
+                    }
+                }
+                .date {
+                    font-size: 14px;
+                    color: #666;
+                }
+            }
+        }
+    }
+}
+
 .video__more {
     button {
         width: 100%;
@@ -107,11 +164,13 @@
 
     .video__play {
         width: 98%;
-        padding-bottom: 56.2%;
+        margin: 0 auto;
+        padding-bottom: 45%;    // 56.2%
         position: relative;
 
         @media (max-width: 800px){
             width: 100%;
+            padding-bottom: 56.2%;
         }
     }
 
