--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -14,4 +14,5 @@
 @import "section/today";
 @import "section/streamer";
 @import "section/video";
-@import "section/swiper"
+@import "section/swiper";
+@import "section/channel";
