추천 스트리머 오류 수정

--- a/src/assets/scss/section/_streamer.scss
+++ b/src/assets/scss/section/_streamer.scss
@@ -1,4 +1,4 @@
-.streamer__inner {
+.streamer2__inner {
     display: flex;
     flex-wrap: wrap;
 
@@ -7,23 +7,23 @@
         height: 200px;
         overflow: hidden;
     }
+}
 
-    .streamer {
-        // margin-right: 20px;
+.streamer {
+    // margin-right: 20px;
 
-        .streamer__img {
-            // width: 150px;
-            // height: 150px;
-            border-radius: 50%;
-            overflow: hidden;
-            margin-bottom: 10px;
-        }
-        .streamer__info {
-            // width: 150px;
-            text-align: center;
-            @include line-one;
-            // padding-bottom: 40px;
-        }
+    .streamer__img {
+        // width: 150px;
+        // height: 150px;
+        border-radius: 50%;
+        overflow: hidden;
+        margin-bottom: 10px;
+    }
+    .streamer__info {
+        // width: 150px;
+        text-align: center;
+        @include line-one;
+        // padding-bottom: 40px;
     }
 }
 
